# brucket

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
brucket-analyzer/: Cargo.toml
brucket-analyzer/src/: lib.rs
brucket-ast/: Cargo.toml
brucket-ast/src/: ast.rs  ast_type.rs  constant_value.rs  function.rs  lambda.rs  lib.rs  path.rs  token.rs
brucket-ast/src/ast/: lambda.rs  (+5 more)
brucket-cli/: Cargo.toml
brucket-cli/src/: main.rs
brucket-interpreter/: Cargo.toml
brucket-interpreter/src/: lib.rs  main.rs  value.rs
brucket-interpreter/src/evaluator/: environment.rs  mod.rs  test.rs  tests.rs
brucket-interpreter/src/evaluator/internal/: mod.rs  pair.rs  test.rs  tests.rs
brucket-interpreter/src/interpreter/: mod.rs  test.rs  tests.rs
brucket-parser/: Cargo.toml
brucket-parser/src/: lib.rs  token.rs
brucket-quote/: Cargo.toml
brucket-quote/src/: lib.rs  tests.rs
brucket-transpiler/: Cargo.toml
brucket-transpiler/src/: lib.rs  main.rs
brucket-transpiler/src/generator/: mod.rs
brucket-transpiler/src/translator/: mod.rs  state.rs  tests.rs
brucket-transpiler/src/transpiler/: mod.rs
c-generator/: Cargo.toml
c-generator/src/: generator.rs  lib.rs
lib/: arithmetic.bk  base.bk  comparison.bk  list.bk  logic.bk  nullability.bk  pair.bk  sort.bk
src/: evaluator.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/evaluator/: environment.rs  internal.rs  mod.rs  test.rs
src/interpreter/: mod.rs  test.rs
src/lexer/: mod.rs  test.rs
src/parser/: mod.rs  test.rs
tests/: interpreter_test.rs
(+39 files in other folders)
