[package]
name = "brucket-transpiler"
version = "0.1.0"
authors = ["Piotr Dobiech"]
edition = "2018"

[dependencies]
brucket-ast = { path = "../brucket-ast" }
brucket-analyzer = { path = "../brucket-analyzer" }
c-generator = { path = "../c-generator" }
maplit = "1.0.2"

[dependencies.derive_more]
version = "0.99.14"
default-features = false
features = ["constructor"]
